final version submitted to brandeis

--- a/biblio.bib
+++ b/biblio.bib
@@ -145,7 +145,7 @@ author = {Alex Keshavarzi et al.}
 	volume = {128},
 	number = {19},
 	author = {R. Aaij et al. },
-	title = {Tests of Lepton Universality Using $B^0 \rightarrow K^{0}_{S}\ell^+\ell^-$ and $B^+ \rightarrow K^{*+}_{S}\ell^+\ell^-$Decays},
+	title = {{Tests of Lepton Universality Using $B^0 \rightarrow K^{0}_{S}\ell^+\ell^-$ and $B^+ \rightarrow K^{*+}_{S}\ell^+\ell^-$Decays}},
 	journal = {Phys. Rev. Letters}
 }
 
@@ -232,7 +232,7 @@ doi = {10.1051/epjconf/201817501006}
 @misc{PDF4LHC,
   doi = {10.48550/ARXIV.1101.0536}, 
   url = {https://arxiv.org/abs/1101.0536},
-  author = {{Sergey Alekhin et al. }},
+  author = {{Sergey Alekhin et al.}},
   keywords = {High Energy Physics - Phenomenology (hep-ph), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
   title = {{The PDF4LHC Working Group Interim Report}},
   publisher = {arXiv},
@@ -323,14 +323,17 @@ keywords = {QCD, Hadron colliders, Monte Carlo simulation}
 }
 
 @article{NoetherTheorem,
-author = {{E. Noether}},
-journal = {{Nachrichten von der Gesellschaft der Wissenschaften zu Göttingen, Mathematisch-Physikalische Klasse}},
-language = {ger},
-pages = {235-257},
-title = {{Invariante Variationsprobleme}},
-url = {http://eudml.org/doc/59024},
-volume = {1918},
-year = {1918}
+	doi = {10.1080/00411457108231446},
+	url = {https://doi.org/10.1080%2F00411457108231446},
+	year = 1971,
+	month = {Jan},
+	publisher = {Informa {UK} Limited},
+	volume = {1},
+	number = {3},
+	pages = {186--207},
+	author = {{E. Noether}},
+	title = {{Invariant variation problems}},
+	journal = {Transport Theory and Statistical Physics}
 }
 
 @misc{DESYHiggsLecture,
@@ -357,7 +360,7 @@ year = {1918}
 }
 
 @article{CMSRun2ZZjj,
-	title = {{Evidence for electroweak production of four charged leptons and two jets in proton-proton collisions at s=13TeV}},
+	title = {{Evidence for electroweak production of four charged leptons and two jets in proton-proton collisions at $\sqrt{s}=13$ TeV}},
 	journal = {Physics Letters B},
 	volume = {812},
 	pages = {135992},
@@ -916,7 +919,7 @@ note = "FF"
 	Number = {10},
 }
 @techreport{TrackParameterFig,
-      author        = {{T. G. Cornelissen et al. }},
+      author        = {{T. G. Cornelissen et al.}},
       title         = "{Updates of the ATLAS Tracking Event Data Model (Release 13)}",
       institution   = "CERN",
       reportNumber  = "ATL-SOFT-PUB-2007-003, ATL-COM-SOFT-2007-008",
@@ -1099,7 +1102,7 @@ url           = "https://cds.cern.ch/record/2683100",
 	volume = {45},
 	number = {1},
 	pages = {1--21},
-	title = {{Measurement of the running of the QED couplingin small-angle Bhabha scattering at LEP}},
+	title = {{Measurement of the running of the QED coupling in small-angle Bhabha scattering at LEP}},
 	journal = {Eur. Phys. J. C},
     author = {{The OPAL Collaboration}}
 }
