--- a/sections/Appendix.tex
+++ b/sections/Appendix.tex
@@ -3,14 +3,14 @@
 \subsection{Contribution to $ZZ^*(\rightarrow 4\ell)jj$ Measurement} 
 \label{subsec:ZZjjContr}
 
-The measurements presented in this thesis are the result of the effort of the ATLAS "Differential VBS $ZZ^*jj$" analysis team. As one of the two primary analyzers in this team, I have contributed to several aspects of this measurement, from the initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurements. Therefore, I led the studies performed to modify the kinematic selections to increase the acceptance, defined the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and established novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I developed and maintained the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and performs the kinematic selections discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events and the final events used in the measurement. Additionally, I estimated the non-prompt backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and contributed to the selection of the relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. Finally, I validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ^*(\rightarrow 4\ell)jj$. I checked the compatibility between the measured data and SM prediction. 
+The measurements presented in this thesis are the result of the effort of the ATLAS "Differential VBS $ZZ^*jj$" analysis team. As one of the two primary analyzers in this team, I have contributed to several aspects of this measurement, from the initial formation to the current stage of finalization and publication. I contributed significantly to defining the analysis phase space discussed in Chapter $IV$. The phase space defined in the preceding ATLAS analysis \cite{ATLASZZjj}, which observed the electroweak $ZZjj$ process was not optimal for differential measurements. Therefore, I led the studies performed to modify the kinematic selections to increase the acceptance, defined the isolation working point to maintain optimal signal-selection and background-rejection probabilities, and established novel pair sorting strategy to reduce the bin migration in unfolding. Moreover, I developed and maintained the main analysis framework, which implements the latest recommendations from combined performance groups for physics object reconstruction discussed in Chapter $III$, and performs the kinematic selections discussed in Chapter $IV$. This framework applies all the scale factors and event weights in MC events and the final events used in the measurement. Additionally, I estimated the non-prompt backgrounds of the analysis using the background estimation technique discussed in Section \ref{sec:Bkg} and contributed to selecting the relevant systematics discussed in Section \ref{sec:Uncertainties} of Chapter $V$. Finally, I validated the novel next-to-leading-order \textsc{Powheg} $qqZZjj$ MC sample used as the primary sample for the electroweak production of $ZZ^*(\rightarrow 4\ell)jj$. I checked the compatibility between the measured data and SM prediction. 
 
 \subsection{Contribution to the ATLAS Experiment}
 \label{subsec:ATLASContr}
 I have been a member of the ATLAS collaboration since $2017$ and have contributed to the three critical areas of the experiment, detector development, detector performance, and physics analyses.
 
 \textbf{Detector Developement:}
-I spent my first year at Brandeis working at Brookhaven National Lab, where I contributed to the prototype development of the all-silicon inner tracker for the High-Luminosity LHC. During this period, I assembled the first three prototypes of the ITk strip detector using a semi-automated loading setup consisting of an Aeoretch robotic arm, cameras, and an alignment system. I developed $3D$-printed tooling pins used in the alignment of loading the sensors on staves. I led comprehensive thermal and mechanical tests of the first stave prototype, the thermo-mechanical stave, using IR imaging and laser metrology, respectively. These tests validated the cooling system designs for the ITk stave core structure and the stability of the mechanical design. During this year, I learned the fundamentals of particle physics detectors, their development, and their operations.  
+I spent my first year at Brandeis working at Brookhaven National Lab, where I contributed to the prototype development of the all-silicon inner tracker for the High-Luminosity LHC. During this period, I assembled the first three prototypes of the ITk strip detector using a semi-automated loading setup consisting of an Aeoretch robotic arm, cameras, and an alignment system. I developed $3D$-printed tooling pins used in the alignment of loading the sensors on staves. I led comprehensive thermal and mechanical tests of the first stave prototype, the thermo-mechanical stave, using IR imaging and laser metrology, respectively. These tests validated the cooling system designs for the ITk stave core structure and the stability of the mechanical design. During this year, I learned the fundamentals of Particle Physics detectors, their development, and their operations.  
 
 \textbf{Physics Analysis:}
 Apart from the $ZZ^*(\rightarrow 4\ell)jj$ analysis presented in this thesis, I have worked on two other ATLAS analyses involving four leptons in the final state, analyzing the full Run-2 dataset. After my Ph.D. candidacy and ATLAS qualification, I joined the inclusive four-lepton measurement analysis team, whose goal was to inclusively measure the differential unfolded cross-sections of the Standard Model four-lepton process. In my first year, I worked on identifying the suitable lepton isolation working points, studied the impact of including electrons and muons originating from tau leptons in the unfolded differential cross-sections, and obtained the most precise measurement to date of the branching ratio of $ Z \to 4\ell$.
@@ -22,7 +22,7 @@ The training of a particle physicist is incomplete without understanding the det
 
 Similarly to $ZZ^*(\rightarrow 4\ell)jj$ measurement, most ATLAS physics analyses use the vertex with the highest value of the sum-squared of track's transverse momenta $(\sum_{tracks}{p_{T}^2})$ as the hard scattering vertex of the measurement. However, in processes with softer leptons and invisible tracks (including photons), $\sum_{tracks}{p_{T}^2}$ is inadequate to identify the hard scatter vertex. Therefore, I am currently working on developing an alternative algorithm that is suitable for a variety of different physics processes. 
 
-The experiences I have gained in different areas of particle physics have significantly shaped my discussion of the measurement presented in this thesis.  
+The experiences I have gained in different areas of Particle Physics have significantly shaped my discussion of the measurement presented in this thesis.  
 
 \section{Additional Study on Unfolding Bias}
 \label{Appendix:Unfolding_bias}
@@ -30,27 +30,27 @@ As discussed in Section \ref{subsec:Bias}, the bias from the unfolding process i
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_stat_unc_mjj_VBSEnh_bin1.pdf}
         \caption{ bin 1}
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_stat_unc_mjj_VBSEnh_bin2.pdf}
         \caption{bin 2 }
     \end{subfigure}\\
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_stat_unc_mjj_VBSEnh_bin3.pdf}
         \caption{ bin 3 }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_stat_unc_mjj_VBSEnh_bin4.pdf}
         \caption{bin 4 }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_stat_unc_mjj_VBSEnh_bin5.pdf}
         \caption{bin 5 }
@@ -62,27 +62,27 @@ The unfolding bias is expected to converge to a value of zero with a higher numb
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_noFakes_VBSEnh_bin1.pdf}
         \caption{ bin 1}
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_noFakes_VBSEnh_bin2.pdf}
         \caption{bin 2 }
     \end{subfigure}\\
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_noFakes_VBSEnh_bin3.pdf}
         \caption{ bin 3 }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_noFakes_VBSEnh_bin4.pdf}
         \caption{bin 4 }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/unfoldingbias/unfolding_bias_mjj_noFakes_VBSEnh_bin5.pdf}
         \caption{bin 5 }
@@ -94,12 +94,12 @@ The differential measurements of the $ZZ^*(\rightarrow 4\ell)jj$ process are sta
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/FakeFraction_pt_jets.pdf}
         \caption{ $p_{T}$ \label{fig:FidFakespT}}
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/FakeFraction_eta_jets.pdf}
         \caption{$\eta$\label{fig:FidFakeseta}}
@@ -122,32 +122,32 @@ The same systematic uncertainties discussed in Chapter $V$ also impact the measu
     \hline 
     Bin $m_{jj}$ [GeV] & [300, 410) & [410, 600) & [600, 1780)\\
     \hline 
-    QCD MC modelling & 2 & 0.16 & \textbf{7.1}\\
-    Jet & \textbf{7.3} & \textbf{6.8} & \textbf{6.2 }\\
+    QCD MC modelling & 1.97 & 0.16 & \textbf{7.12}\\
+    Jet & \textbf{7.26} & \textbf{6.75} & \textbf{6.16}\\
     Trigger & 0.03 & 0.06 & 0.08 \\
-    Leptons & 1.4 & 1.5 & 1.6 \\
+    Leptons & 1.42 & 1.49 & 1.56 \\
     PRW & 0.39 & 0.06 & 0.16\\
-    Theory ($qqZZ$) & 1.9 & 2.3 & 2.1 \\
+    Theory ($qqZZ$) & 1.93 & 2.29 & 2.07 \\
     Theory (EWK $qqZZjj$) & 0.02 & 0.02 & 0.04 \\
     Theory ($ggZZ$) & 0.13 & 0.22 & 0.28 \\
-    MC Bkg. (ttV+VVV) & 1.6 & 1.7 & 1.6 \\
-    Fake Bkg. (stat + syst) & 3.4 & 2.9 & 2.6 \\
-    Luminosity & 1.5 & 1.4 & 1.4 \\
-    Unfolding Bias & \textbf{12.1} & \textbf{11.0} & \textbf{6.1}\\
+    MC Bkg. (ttV+VVV) & 1.61 & 1.72 & 1.52 \\
+    Fake Bkg. (stat + syst) & 3.43 & 2.95 & 2.62 \\ 
+    Luminosity & 1.48 & 1.36 & 1.45 \\
+    Unfolding Bias & \textbf{11.76} & \textbf{10.95} & \textbf{6.06}\\
     \hline
-    Total & 14.7 & 13.6 & 12.0 \\
+    Total & 14.74 & 13.64 & 11.98 \\
     \hline
     \end{tabular}
 \end{table}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Systematics/systematics_VBS_Suppressed.pdf}
         \caption{ Statistical and systematic uncertainties. \label{fig:sys_mjj_VBS_Suppressed_total}}
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Systematics/jet_systematics_VBS_Suppressed.pdf}
         \caption{Breakdown of jet-related uncertainties. \label{fig:sys_mjj_VBS_Suppressed_jet} }
@@ -160,7 +160,7 @@ The same systematic uncertainties discussed in Chapter $V$ also impact the measu
 
 Figures \ref{fig:reco_VBS_Suppressed_a} and \ref{fig:reco_VBS_Suppressed_b} show the measured data yields compared to the SM detector-level predictions as a function of the eleven kinematic observables in the VBS-Suppressed region. Distributions are statistically limited, and the impact of theoretical and experimental systematic uncertainties shown in black bands ranges from about $20$ to $30\%$ depending on bins and distributions. Similarly to the VBS-Enhanced region, a $\chi^2/NDF$ for each distribution is also reported. These values suggest a good agreement between the measured data and the SM prediction. 
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
@@ -195,7 +195,7 @@ Figures \ref{fig:reco_VBS_Suppressed_a} and \ref{fig:reco_VBS_Suppressed_b} show
     \caption{Detector-level distributions in the VBS-Suppressed region.}  \label{fig:reco_VBS_Suppressed_a}
 \end{figure}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
@@ -228,9 +228,9 @@ Figures \ref{fig:reco_VBS_Suppressed_a} and \ref{fig:reco_VBS_Suppressed_b} show
 \subsection{Unfolded Cross-sections}
 \label{appendix:VBSSupUnfolded}
 
-Figures \ref{fig:unfolded_xs_VBS_Suppressed_a} and \ref{fig:unfolded_xs_VBS_Suppressed_b} show the measured unfolded differential cross-sections as a function of the eleven kinematic observables in the VBS-Suppressed region. The unfolded differential cross-sections (black) are compared with two different state-of-the-art SM particle-level predictions, first, where the QCD $qqZZ$ is generated by \textsc{Sherpa} (red) and second, where the QCD $qqZZ$ is generated by \textsc{Madgraph} (blue). The vertical-solid line in the black distribution shows the statistical uncertainty of the unfolded cross-sections, and the black band represents the total systematic uncertainties. Similarly, the dashed-red and dashed-blue bands represent the fiducial uncertainties on the \textsc{Sherpa} and \textsc{Madgraph} particle-level predictions, respectively. Similarly to the VBS-Enhanced region, the p-values comparing the unfolded cross-sections with the two SM particle-level predicted cross-sections are estimated. The reported p-values of more than $0.05$ and the ratios of particle-level yields to the unfolded-data yields suggest no significant statistical deviations of the differential cross-section from the SM predicted values. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ^*(\rightarrow 4) \ell jj$ process, all differential cross-sections in the VBS-Suppressed region are concluded to agree with the SM predictions. 
+Figures \ref{fig:unfolded_xs_VBS_Suppressed_a} and \ref{fig:unfolded_xs_VBS_Suppressed_b} show the measured unfolded differential cross-sections as a function of the eleven kinematic observables in the VBS-Suppressed region. The unfolded differential cross-sections (black) are compared with two different state-of-the-art SM particle-level predictions, first, where the QCD $qqZZ$ is generated by \textsc{Sherpa} (red) and second, where the QCD $qqZZ$ is generated by \textsc{Madgraph} (blue). The vertical error bars show the statistical uncertainties of the unfolded cross-sections, and the black bands represent the total systematic uncertainties. Similarly, the dashed-red and dashed-blue bands represent the fiducial-level uncertainties on the \textsc{Sherpa} and \textsc{Madgraph} particle-level predictions, respectively. Similarly to the VBS-Enhanced region, the p-values comparing the unfolded cross-sections with the two SM particle-level predicted cross-sections are estimated. The reported p-values of more than $0.05$ and the ratios of particle-level yields to the unfolded-data yields suggest no significant statistical deviations of the measured differential cross-sections from the SM predicted values. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ^*(\rightarrow 4) \ell jj$ process, all differential cross-sections in the VBS-Suppressed region are concluded to agree with the SM predictions. 
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
@@ -265,7 +265,7 @@ Figures \ref{fig:unfolded_xs_VBS_Suppressed_a} and \ref{fig:unfolded_xs_VBS_Supp
     \caption{Unfolded differential cross-sections in the VBS-Suppressed region.}  \label{fig:unfolded_xs_VBS_Suppressed_a}
 \end{figure}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
