--- a/sections/Experiment.tex
+++ b/sections/Experiment.tex
@@ -1,4 +1,4 @@
-\part{\LARGE{Experimental Setup}}
+\part{Experimental Setup}
 \label{sec:Experiment}
 
 The European Organization for Nuclear Research, CERN, in Geneva, Switzerland, is home to the world's largest particle accelerator, the Large Hadron Collider. The measurements presented in this thesis correspond to the processes at the frontier of high-energy collisions. The collisions at the relevant high-energy scale are only possible through large particle accelerators, which reduces the energy loss through synchrotron radiation. The LHC detectors are large in size to effectively measure and stop the high energy particles from collisions. There are currently eight experiments analyzing the data from the LHC, among which ATLAS and CMS are the two largest multipurpose experiments. They analyze the collected data to perform SM precision measurements and direct searches for new physics. This thesis analyzes data collected by the ATLAS experiment between 2015-2018.
