--- a/sections/Analysis_FiducialSelection.tex
+++ b/sections/Analysis_FiducialSelection.tex
@@ -3,7 +3,7 @@
 
 The ATLAS detector has limited acceptance in the physical phase space, and the selected objects and events are reconstructed within this acceptance phase space. Thus, a fiducial phase space imitating the detector acceptance is defined using physics objects at the particle level to measure the unfolded differential cross-sections. The particle-level signal events are essential to derive the inputs needed to correct the detector effects. Moreover, the measured unfolded cross-sections are compared to the SM-predicted particle-level cross-sections evaluated from these events. Thus, it is essential to carefully select the particle-level signal events in the defined fiducial phase space. This section summarizes the kinematic requirements defining the fiducial phase space of the analysis and the selection of the particle-level signal events. 
 
-The kinematic selections for the fiducial phase space are close to the detector-level object and event selections. The kinematic requirements applied are motivated by the nature of the electroweak production of $pp\rightarrow ZZ^* ( \rightarrow 4\ell) jj$ $[\ell = e,~\mu]$, where the two SF-OC lepton pairs from two $Z$ bosons are produced centrally with respect to the highly energetic dijet. Moreover, the fiducial phase space contains no leptons from tau decays. Both fiducial-level electrons and muons are required to be dressed. The dressing procedure accounts for the energy losses of leptons through photon emissions via bremsstrahlung. Dressed leptons are constructed by adding the four-momenta of nearby photons within the lepton's small $\Delta R < 0.1$ cone. Several kinematic cuts summarized in Table \ref{tab:FidObjectCut} are applied individually to the muons, electrons, and jets to ensure the selected objects fall within detector acceptance before defining the events. Motivated by the discussion of physics object reconstruction in Section \ref{sec:ParticleReconstruction}, each electron is required to have $p_{T} > 7$ GeV and $|\eta| < 2.47$, whereas the muons satisfy $p_{T} > 5$ GeV and $|\eta| < 2.7$. 
+The kinematic selections for the fiducial phase space are close to the detector-level object and event selections. The kinematic requirements applied are motivated by the nature of the electroweak production of $pp\rightarrow ZZ^* ( \rightarrow 4\ell) jj$ $[\ell = e,~\mu]$, where the two SF-OC lepton pairs from two $Z$ bosons are produced centrally with respect to the highly energetic dijet. Moreover, the fiducial phase space contains no leptons from tau decays. Both fiducial-level electrons and muons are required to be dressed. The dressing procedure accounts for the energy losses of leptons through photon emissions via bremsstrahlung. Dressed leptons are constructed by adding the four-momenta of nearby photons within the lepton's small $\Delta R < 0.1$ cone. Several kinematic cuts summarized in Table \ref{tab:FidObjectCut} are applied individually to the muons, electrons, and jets to ensure the selected particle-level objects fall within the detector's acceptance before defining the events. Motivated by the discussion of physics object reconstruction in Section \ref{sec:ParticleReconstruction}, each electron is required to have $p_{T} > 7$ GeV and $|\eta| < 2.47$, whereas the muons satisfy $p_{T} > 5$ GeV and $|\eta| < 2.7$. 
 
 \begin{table}[!htbp]
     \centering
