--- a/sections/Analysis_Trigger.tex
+++ b/sections/Analysis_Trigger.tex
@@ -1,7 +1,7 @@
 \section{Trigger}
 \label{sec:Trigger}
 
-Due to the presence of four fully reconstructed leptons in the final state, the data events and detector-level MC events are preselected using a logical OR of different single and double-lepton triggers. The trigger menu varies according to the data-taking run periods to reflect the changes in the high-level trigger system, which are required to cope with increasing data rates. Additionally, trigger matching is required for the selected events. The trigger matching selects a subset of preselected events in which at least one lepton of the quadruplet is matched to one of the fired triggers. Table \ref{tab:Trigger} shows the trigger menu used by the analysis per different data periods using either electrons, muons, or mixed electron-muon triggers. The \textit{HLT\_*} string specifies the high-level trigger menu used where the "e" or "mu" substring specifies the type of object used to fire the trigger, and the attached number specifies the minimum $p_{T}$ threshold for the object. The substring \textit{lh*} attached to \textit{HLT\_*} stands for the likelihood identification working point for the electrons, and the \textit{ivar*} specifies the isolation working point used for either object. The string \textit{L1*} indicates the use of either calorimeters or MS L1 trigger, and the string \textit{noL1} suggests the absence of L1 triggers. 
+Due to the presence of four fully reconstructed leptons in the final state, the data events and predicted detector-level events are preselected using a logical OR of different single and double-lepton triggers. The trigger menu varies according to the data-taking run periods to reflect the changes in the high-level trigger system, which are required to cope with increasing data rates. Additionally, trigger matching is required for the selected events. The trigger matching selects a subset of preselected events in which at least one lepton of the quadruplet is matched to one of the fired triggers. Table \ref{tab:Trigger} shows the trigger menu used by the analysis per different data periods using either electrons, muons, or mixed electron-muon triggers. The \textit{HLT\_*} string specifies the high-level trigger menu used where the "e" or "mu" substring specifies the type of object used to fire the trigger, and the attached number specifies the minimum $p_{T}$ threshold for the object. The substring \textit{lh*} attached to \textit{HLT\_*} stands for the likelihood identification working point for the electrons, and the \textit{ivar*} specifies the isolation working point used for either object. The string \textit{L1*} indicates the use of either calorimeters or MS L1 trigger, and the string \textit{noL1} infers that no L1 triggers were fired. 
 
 \begin{table}[!htbp]
     \centering
@@ -58,12 +58,10 @@ Due to the presence of four fully reconstructed leptons in the final state, the 
     \caption{Trigger menu used in the analysis for event preselection \label{tab:Trigger}}
 \end{table}
 
-%The trigger efficiency of MC is defined as a ratio of events passing the logical OR selection of the triggers to the number of events passing reconstruction level pre-trigger selection. The trigger efficiency for MC events could differ from that for the data. Thus, trigger efficiency scale factors are applied to MC events to account for the differences. The scale factors are defined as a fraction of trigger efficiency for MC to that of data and retrieved from the ATLAS supported tool \textit{TrigGlobalEffciencyCorrectionTool}\footnote{https://gitlab.cern.ch/atlas/athena/tree/21.2/Trigger/TrigAnalysis/TrigGlobalEfficiencyCorrection}.
+Figure \ref{fig:Trigger} shows the efficiency of trigger selection in events with a signal quadruplet and a dijet as a function of the invariant mass of the four-lepton system ($m_{4\ell}$) in data and total SM prediction for $2015$-$2016$ data-taking period. The trigger efficiency is the ratio of events passing detector-level event selection and trigger requirements to the total number of events passing detector-level event selection requirements. The requirements for detector-level event selection are discussed in Section \ref{sec:EventSel}. For both data and prediction, the trigger efficiency is $100\%$ except for the first bin. Scale factors are applied to MC events to account for possible trigger efficiency differences between data and MC events. The scale factors are defined as a fraction of trigger efficiency for MC to that of data and retrieved from the ATLAS supported tool \textit{TrigGlobalEffciencyCorrectionTool}\footnote{https://gitlab.cern.ch/atlas/athena/tree/21.2/Trigger/TrigAnalysis/TrigGlobalEfficiencyCorrection}.
 
-Figure \ref{fig:Trigger} shows the efficiency of trigger selection in events with a signal quadruplet and a dijet as a function of invariant mass of the four-lepton system ($m_{4\ell}$) in data and total SM prediction for $2015$-$2016$ data-taking period. The trigger efficiency is the ratio of events passing detector-level event selection and trigger requirements to the total number of events passing detector-level event selection requirements. For both data and prediction, the trigger efficiency is $100\%$. The requirements for detector-level event selection are discussed in Section \ref{sec:EventSel}.
-
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.8\linewidth]{figures/AnalysisOverview/TriggerEfficiency_DataMC.pdf}
+    \includegraphics[width=.8\linewidth]{figures/AnalysisOverview/TriggerEfficiency.pdf}
     \caption{ Trigger efficiency as a function of $m_{4\ell}$ in events with a quadruplet and a dijet in data and SM prediction corresponding to the $2015$-$2016$ data-taking period.\label{fig:Trigger}}
 \end{figure}
