--- a/sections/Analysis_Unfolding.tex
+++ b/sections/Analysis_Unfolding.tex
@@ -14,21 +14,21 @@ The analysis uses an \textit{iterative Bayesian unfolding} algorithm based on Ba
 P(C_{i}|E) = \frac{ P(E|C_{i}) . P(C_{i}) } { \sum_{j}{ P(E|C_{j}).P(C_{j}) } }.
 \label{eqn:BayesTheorem}
 \end{equation}
-The obtained probability depends on the prior probability of the cause and the conditional probability of cause and effect, where, in experimental particle physics, the cause is the actual particle-level value, and the effect is the measured one. The prior dependency is reduced by using an iterative technique, where the outcome of the previous iteration is used as a prior for the subsequent iteration.
+The obtained probability depends on the prior probability of the cause and the conditional probability of cause and effect, where, in experimental Particle Physics, the cause is the actual particle-level value, and the effect is the measured one. The prior dependency is reduced by using an iterative technique, where the outcome of the previous iteration is used as a prior for the subsequent iteration.
 
 For a single iteration, the algorithm can be summarized as 
 \begin{equation}
     U_{i} = \frac{1}{ \epsilon_{i} } \times \sum^{reco~bins}_{j}{ (R_j -F_j ) . f_{i} . \frac{M_{ji} T_{i}}{ \sum_{k}^{truth~bins}{M_{jk} T_{k}}} },
     \label{eqn:BayesianUnfolding}
 \end{equation}
-where $U_{i}$ is the unfolded yield in the target bin $i$, $T_{i}$ is the predicted truth level yield in particle bin $i$, $R_{j}$ is the observed detector-level yield in reco bin $j$ and $F_{j}$ is the subtracted detector-level reducible background yield. $M_{ij}$ is the migration matrix element from particle-level bin $j$ to detector-level bin $i$. 
+where $U_{i}$ is the unfolded yield in the target bin $i$, $T_{i}$ is the predicted particle-level yield in particle bin $i$, $R_{j}$ is the observed detector-level yield in reco bin $j$ and $F_{j}$ is the subtracted detector-level reducible background yield. $M_{ij}$ is the migration matrix element from particle-level bin $j$ to detector-level bin $i$. 
 
-Based on the discussion above, conceptually, three corrections from the SM MC prediction need to be applied to estimate the unfolded yield. The three unfolding inputs are 
+Based on the discussion above, conceptually, three corrections from the SM MC prediction need to be applied to estimate the unfolded yield. The three unfolding inputs are: 
 
 \begin{itemize}
     \item{\textit{\textbf{Reconstruction efficiency ($\epsilon$),}} which accounts for the limited efficiency of the detector. It is defined as the ratio between the number of events that pass both detector- and fiducial-level selections and the number of events that pass only the fiducial-level selection. }
     
-    \item{\textit{\textbf{Fiducial fraction ($f$),}} which corrects for events that are outside the fiducial region which are selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. It is defined as the ratio between the number of events that pass both detector- and fiducial-level selections to the number of events passing only the detector-level selection. }
+    \item{\textit{\textbf{Fiducial fraction ($f$),}} which corrects for events that are outside the fiducial region selected as part of the detector-level events due to limited detector resolution. An example of such an event would be a signal $ZZ^*(\rightarrow 4\ell) jj$ event where one of the jets originates from pile-up instead of hard-scatter. It is defined as the ratio between the number of events that pass both detector- and fiducial-level selections to the number of events passing only the detector-level selection. }
     
     \item{\textit{\textbf{Migration matrix ($M_{ij}$),}} is a two-dimensional matrix that accounts for events migrated from particle-level bin $j$ to detector-level bin $i$. The migration matrix corrects the probability of bin migration. It is measured in MC by comparing particle- and detector-level distributions for events that pass both fiducial- and detector-level selections. Bin migrations result from resolution effects and smearing of the reconstructed distributions. The diagonal component of the migration matrix is related to the \textit{fiducial purity}, which corresponds to the fraction of detector-level events that originate from the same bin at the particle level. A similar distribution \textit{stability} defined as the fraction of particle-level events reconstructed in the same detector-level bin is also closely related to the diagonal component of the migration matrix. }
 \end{itemize}
@@ -37,12 +37,12 @@ Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding in
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/efficiencies_VBS_Enhanced.pdf}
         \caption{ reconstruction efficiency, fiducial fraction, purity, and stability. \label{fig:UI_mjj} }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/migration_matrix_VBS_Enhanced.pdf}
         \caption{Normalized migration matrix showing percentage of bin migration \label{fig:MigMatrix}}
@@ -52,9 +52,9 @@ Figures \ref{fig:UI_mjj} and \ref{fig:MigMatrix} show the first two unfolding in
 
 \subsection{Binning Optimization}
 \label{subsec:Binning}
-Optimal binning is required to perform the unfolding procedure effectively for all kinematic observables. Two factors drive the choice of binning: the necessity to have large enough bin statistics to maintain the Gaussian approximation in statistical uncertainty propagation while preserving the shape of the differential distributions and the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
+Optimal binning is required to perform the unfolding procedure effectively for all kinematic observables. Two factors drive the choice of binning: the necessity to have large enough bin statistics to maintain the Gaussian approximation used in the statistical uncertainty propagation while preserving the shape of the differential distributions and the necessity to minimize large bin migrations and statistical uncertainties from unfolding. Therefore, each bin must have at least $15$ events in the VBS-Suppressed region and at least $20$ events in the VBS-Enhanced signal region. 
 
-To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, every bin width must be equal to or greater than the observable resolution in the same bin for each observable. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selection. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
+To maintain a good performance of the unfolding, each bin for the kinematic observable has at least $70\%$ purity except for $p_{T,4\ell jj}$ where at least $50\%$ purity is required. Moreover, every bin width must be equal to or greater than the observable resolution in the same bin for each observable. The resolution in each particle-level bin is evaluated from MC by comparing the difference of particle and detector-level yield for events that pass both fiducial- and detector-level event selections. The difference is fitted using Gaussian approximation, and twice the resulting standard deviation is taken as the bin resolution. Table \ref{tab:binning} shows the final bin choices for all kinematic observables used in differential cross-section measurement.
 
 \begin{table}[!htbp]
     \caption{Binning for all unfolded observables in VBS-Enhanced and VBS-Suppressed regions. \label{tab:binning}}
@@ -117,6 +117,8 @@ To maintain a good performance of the unfolding, each bin for the kinematic obse
     \end{center}
 \end{table}
 
+\newpage
+
 \subsection{Method Validation}
 \label{subsec:UnfoldingValidation}
 The unfolding method is validated using three tests: MC-based closure test, injection test, and test with physics variations.  
@@ -124,26 +126,26 @@ The unfolding method is validated using three tests: MC-based closure test, inje
 \subsubsection{MC Validation Test}
 \label{subsubsec:MCClosure}
 
-The first validation of the unfolding technique is with the SM MC. A detector-level distribution for a kinematic observable is predicted from SM and unfolded using the unfolding inputs from the same MC. Figure \ref{fig:unfolding_technical_closure} shows an example of the MC-based closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level MC prediction is unfolded using the inputs from the same MC, and the resulting unfolded distribution is compared with the particle-level prediction. Since both detector-level prediction and unfolding inputs are from the same MC, a perfect closure is observed when comparing the unfolded- and particle-level predictions.
+The first validation of the unfolding technique is with the SM MC. A detector-level distribution for a kinematic observable is predicted from SM and unfolded using the unfolding inputs from the same MC. Figure \ref{fig:unfolding_technical_closure} shows an example of the MC-based closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level MC prediction is unfolded using the inputs from the same MC, and the resulting unfolded distribution is compared with the particle-level prediction, as shown in the lower panel. Since both detector-level prediction and unfolding inputs are derived from the same MC, a perfect closure is observed when comparing the unfolded- and particle-level predictions.
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
 \centering
 \includegraphics[width=.6\textwidth]{figures/Analysis/Unfolding/technical_closure_VBS_Enhanced.pdf}
-\caption{MC technical closure test of the unfolding procedure for $m_{jj}$. The detector-level MC distribution (in blue) is unfolded with the nominal SM unfolding inputs and compared to the particle-level distribution (in red) from the same MC.\label{fig:unfolding_technical_closure}}
+\caption{MC technical closure test of the unfolding procedure for $m_{jj}$. The detector-level MC distribution (in blue) is unfolded (black) with the nominal SM unfolding inputs and compared to the particle-level distribution (in red) from the same MC.\label{fig:unfolding_technical_closure}}
 \end{figure}
 
 \subsubsection{Injection Test}
 \label{subsubsec:InjectionTest}
-The analysis uses a model-independent EFT approach discussed in Section \ref{sec:EFT} to constrain the effect of BSM physics. Therefore, it is essential to test the ability of the unfolding algorithm to uncover the accurate particle-level prediction from data containing BSM physics via injection test. In an injection test, a BSM physics contribution is added to the SM detector-level prediction, unfolded with the nominal SM unfolding inputs, and compared with the BSM-added particle-level distribution. Figure \ref{fig:Dim8cont} shows an injection test for $m_{jj}$ in the VBS-Enhanced region where a BSM contribution is added to the SM MC. The BSM contribution is from linear and quadratic contributions of an $FT0$ dimension-8 EFT operator, which modifies the quartic gauge electroweak vertex shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}. The value of the coefficient corresponding to the injected $FT0$ dimension-8 EFT operator is at about $75\%$ of the obtained upper limit when fitting the measured cross-section, which is discussed in detail in Section \ref{sec:EFT}. Figure \ref{fig:InjectTestResult} shows the result of the injection test. The BSM-added detector-level MC prediction is unfolded using nominal SM MC unfolding inputs and compared against the BSM-added particle-level distribution. A small non-closure of about $5\%$ in the last bin of $m_{jj}$ is observed, which is well within the statistical uncertainties of the unfolded distribution.
+The analysis uses a model-independent EFT approach which will be discussed in Section \ref{sec:EFT} to constrain the effect of BSM physics. Therefore, it is essential to test the ability of the unfolding algorithm to uncover the accurate particle-level prediction from data containing BSM physics via injection test. In an injection test, a BSM physics contribution is added to the SM detector-level prediction, unfolded with the nominal SM unfolding inputs, and compared with the BSM-added particle-level distribution. Figure \ref{fig:Dim8cont} shows an injection test for $m_{jj}$ in the VBS-Enhanced region where a BSM contribution is added to the SM MC. The BSM contribution is from linear and quadratic contributions of an $FT0$ dimension-8 EFT operator, which modifies the quartic gauge electroweak vertex shown in Figure \ref{fig:ZZjjFeynmanDiag_EWk_b}. The value of the coefficient corresponding to the injected $FT0$ dimension-8 EFT operator is at about $75\%$ of the obtained upper limit when fitting the measured cross-section, which is discussed in detail in Section \ref{sec:EFT}. Figure \ref{fig:InjectTestResult} shows the result of the injection test. The BSM-added detector-level MC prediction is unfolded using nominal SM MC unfolding inputs and compared against the BSM-added particle-level distribution. A small non-closure of about $5\%$ in the last bin of $m_{jj}$ is observed, which is well within the statistical uncertainties of the unfolded distribution.
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/injection_test_FT0_quad_mjj_detectorPred.pdf}
         \caption{ Detector level SM+BSM prediction. \label{fig:Dim8cont} }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/injection_test_FT0_quad_mjj.pdf}
         \caption{Unfolded SM+BSM predicted. \label{fig:InjectTestResult}}
@@ -152,21 +154,21 @@ The analysis uses a model-independent EFT approach discussed in Section \ref{sec
 \end{figure}
 
 \subsubsection{Physics Variation}
-From the previous ATLAS electroweak $ZZjj$ analysis, a slight enhancement on the central value of the EWk $ZZjj$ cross-section was measured \cite{ATLASZZjj}. The final unfolding validation tested the ability of the algorithm to recover the actual shape of particle-level distribution if a physics process cross-section was different from the SM prediction. First, as shown by Figure \ref{fig:unfolding_xsec_var_QCD}, the cross-section for parton-initiated QCD $qqZZ$ is varied by a factor equal to the expected statistical uncertainty of $\pm  15\%$. The varied detector-level distribution is then unfolded using the nominal SM MC unfolding inputs and compared with the varied fiducial level prediction. Figure \ref{fig:unfolding_xsec_var_EWK} shows the same test where the $EWK qqZZjj$ cross-section is varied by $\pm 11\%$ based on the enhanced cross-section observed in the previous measurement. In both cases, a non-closure of about $1\%$ is observed, well below the statistical uncertainties from unfolding.
+From the previous ATLAS electroweak $ZZjj$ analysis, a slight enhancement on the central value of the EWk $ZZjj$ cross-section was measured \cite{ATLASZZjj}. The final unfolding validation tested the ability of the algorithm to recover the actual shape of particle-level distribution if a physics process cross-section was different from the SM prediction. First, as shown by Figure \ref{fig:unfolding_xsec_var_QCD}, the cross-section for parton-initiated QCD $qqZZ$ is varied by a factor equal to the expected statistical uncertainty of $\pm  15\%$. The varied detector-level distribution is then unfolded using the nominal SM MC unfolding inputs and compared with the varied fiducial-level prediction. Figure \ref{fig:unfolding_xsec_var_EWK} shows the same test where the EWK $qqZZjj$ cross-section is varied by $\pm 11\%$ based on the enhanced cross-section observed in the previous measurement. In both cases, a non-closure of about $1\%$ is observed, well below the statistical uncertainties from unfolding.
 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/QCD_xsec_variation.pdf}
         \caption{ QCD cross-section is varied by $\pm  15\%$ \label{fig:unfolding_xsec_var_QCD} }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/EWK_xsec_variation.pdf}
         \caption{ EWK cross-section is varied by $\pm 11\%$ \label{fig:unfolding_xsec_var_EWK}}
     \end{subfigure}
-    \caption{ Unfolding validation using physics variation where parton-initiated QCD (left) or the EWK process cross-sections are varied. \label{fig:unfolding_xsec_var}}
+    \caption{ Unfolding validation using physics variation where parton-initiated QCD (left) or the EWK (right) process cross-sections are varied. \label{fig:unfolding_xsec_var}}
 \end{figure}
 
 \subsection{Bias and Optimization}
@@ -174,33 +176,34 @@ From the previous ATLAS electroweak $ZZjj$ analysis, a slight enhancement on the
 
 The unfolded procedure relies on a prior value depending on the SM MC, which naturally biases the unfolded cross-sections. With each iteration of unfolding, the algorithm improves the knowledge of the prior, thus, reducing the unfolding bias. However, with an increasing number of iterations, the iteration correction for bin migrations amplifies the statistical fluctuations in data, resulting in larger values of statistical uncertainties. Therefore, a finite number of iterations is chosen, and the resulting unfolding bias is taken as the systematic uncertainty for the measurement. 
 
-For optimization, the unfolding bias is evaluated by the \textit{data-driven closure test}, where a pseudo dataset is developed using the ratio of observed background-subtracted data and SM detector-level prediction. First, for each observable, the data to MC ratio is smoothed using Friedman's Super Smoother technique \cite{FriedmanSmoother}, fixing the endpoints to the ratio value in the first and last bins. A reweighing function for each observable is developed to reweigh the SM fiducial- and detector-level predictions. The reweighed pseudo-detector-level prediction is then unfolded with the nominal unfolding inputs from SM and compared with the reweighed pseudo-particle-level prediction to get the final unfolding bias.
+For optimization, the unfolding bias is evaluated by the \textit{data-driven closure test}, where a pseudo dataset is developed using the ratio of observed background-subtracted data and SM detector-level prediction. First, for each observable, the data to MC ratio is smoothed using Friedman's Super Smoother technique \cite{FriedmanSmoother}, fixing the endpoints to the ratio value in the first and the last bins. A re-weighting function for each observable is developed to reweigh the SM fiducial- and detector-level predictions. The reweighed pseudo-detector-level prediction is then unfolded with the nominal unfolding inputs from SM and compared with the reweighed pseudo-particle-level prediction to get the final unfolding bias.
 
-Figure \ref{fig:unfolding_ddclosure} shows a step-by-step procedure for the data-driven closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level SM prediction and collected data with their ratio are shown in Figure \ref{fig:ddclosure_DataMC}, and Figure \ref{fig:ddclosure_DataMCSmooth} shows the smooth ratio of Data to MC prediction. Figure \ref{fig:ddclosure_DataMCReweighted} shows the nominal and pseudo-detector-level predictions. Finally, Figure \ref{fig:ddclosure_FinalBias} compares the pseudo-unfolded distribution to the pseudo-particle-level prediction and shows the final data-driven closure for the unfolding bias. As shown by the ratio panel of Figure \ref{fig:ddclosure_FinalBias}, unfolding bias is observed to be about $10\%$. 
+Figure \ref{fig:unfolding_ddclosure} shows a step-by-step procedure for the data-driven closure test for $m_{jj}$ in the VBS-Enhanced region. The detector-level SM prediction and collected data with their ratio are shown in Figure \ref{fig:ddclosure_DataMC}, and Figure \ref{fig:ddclosure_DataMCSmooth} shows the smooth ratio of Data to MC prediction. Figure \ref{fig:ddclosure_DataMCReweighted} shows the nominal and pseudo-detector-level predictions. Finally, Figure \ref{fig:ddclosure_FinalBias} compares the pseudo-unfolded distribution to the pseudo-particle-level prediction, and the lower panel shows the final unfolding bias obtained from the data-driven closure test. As shown by the ratio panel of Figure \ref{fig:ddclosure_FinalBias}, unfolding bias is observed to be about $10\%$. 
 \begin{figure}[htb]
     \centering
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/DDClosure_VBS_Enhanced_Ratio.pdf}
         \caption{ Data and MC for $m_{jj}$ \label{fig:ddclosure_DataMC}}
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/DDClosure_VBS_Enhanced_SmoothRatio.pdf}
         \caption{Smoothed ratio of Data and MC. \label{fig:ddclosure_DataMCSmooth} }
     \end{subfigure}\\
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/DDClosure_VBS_Enhanced_Reweighted.pdf}
-        \caption{ Nominal SM (red) detector-level yield and reweighted-detector-level yield(green). \label{fig:ddclosure_DataMCReweighted} }
+        \caption{ Nominal SM (red) detector-level yield and re-weighted detector-level yield(green). \label{fig:ddclosure_DataMCReweighted} }
     \end{subfigure}
-    \begin{subfigure}{.48\textwidth}
+    \begin{subfigure}{.49\textwidth}
         \centering
         \includegraphics[width=.9\linewidth]{figures/Analysis/Unfolding/DDClosure_VBS_Enhanced_Bias.pdf}
         \caption{Unfolding bias. \label{fig:ddclosure_FinalBias} }
     \end{subfigure}
     \caption{ A step-by-step overview of the data-driven closure test to get the unfolding bias. \label{fig:unfolding_ddclosure}}
 \end{figure}
+
 The bias observed in Figure \ref{fig:ddclosure_FinalBias} is obtained using a single iteration for Bayesian unfolding. The data-driven closure test was repeated for several iterations in the VBS-Suppressed region to reduce the unfolding bias. The resulting unfolding bias and systematic uncertainties up to $4$ iterations are shown by Figures \ref{fig:UnfoldingBiasIteration} and \ref{fig:UnfoldingStatUnc}, respectively. As expected, the unfolding bias decreases, whereas the statistical uncertainty increases with the higher number of iterations. A single iteration is the optimal measurement choice to balance the statistical and the unfolding bias uncertainties.
 
 \begin{figure}[htb]
