--- a/sections/Results_DetectorLevelMeasurements.tex
+++ b/sections/Results_DetectorLevelMeasurements.tex
@@ -1,7 +1,7 @@
-\section{ Detector Level Measurements }
+\section{Detector Level Measurements }
 \label{sec:DetectorLevel_Measurement}
 
-Figure \ref{fig:reco_VBS_Enhanced_a} shows the measured detector-level data and predicted detector-level yield for six kinematic observables:
+Figure \ref{fig:reco_VBS_Enhanced_a} shows the measured detector-level data and predicted detector-level yields for six kinematic observables:
 \begin{itemize}
     \item{ invariant mass of the dijet system $[m_{jj}]$},
     \item{ invariant mass of the two $Z$ bosons $[m_{4\ell}]$},
@@ -10,20 +10,20 @@ Figure \ref{fig:reco_VBS_Enhanced_a} shows the measured detector-level data and 
     \item{ transverse momentum of the two $Z$ bosons and two tagging jets $[p_{T,4\ell jj}]$}, and 
     \item{ scalar transverse momentum of the two $Z$ bosons and dijet $[s_{T,4\ell jj}]$}.
 \end{itemize}
-Similarly, Figure \ref{fig:reco_VBS_Enhanced_b} shows the detector-level data and prediction for remaining kinematic observables:
+Similarly, Figure \ref{fig:reco_VBS_Enhanced_b} shows the detector-level data and predictions for remaining kinematic observables:
 \begin{itemize}
 \item{ cosine of the decay angle of the negative lepton of the leading (sub-leading) pair in the pair's rest frame $[\cos \theta^{*}_{\ell 1 (3) \ell 2 (4)}]$},
 \item{ signed difference between the azimuthal angle of two jets $[\Delta \phi _{jj}^{signed}]$},
 \item{ rapidity difference between two jets $[\Delta y_{jj}]$}, and 
 \item{ centrality of the system $[\zeta]$}.
 \end{itemize}
-For each of these distributions, the measured data (black dot) is compared with the state-of-the-art SM predictions, where the two QCD signal $qqZZjj$ (red) and $ggZZjj$ (blue), and the two MC predicted background, $VVV$ (yellow) and $ttV$ (purple) are \textsc{Sherpa} predictions. The contribution from non-prompt backgrounds (light pink) is estimated using the data-driven method. The $qqZZjj$ electroweak signal is obtained from \textsc{PowhegV2}, and the electroweak production of triboson and two jets ($VZZjj$) is obtained from \textsc{Sherpa}. The vertical-solid error bars on the data points represent the statistical uncertainty in the measured data, and the dashed black band in each bin represents the impact of the total theoretical and experimental uncertainties on the predicted detector-level yields. The impact on the bin yield from the total systematic uncertainties and the statistical precision each ranges from $15$ to $20\%$, depending on the bins and the distributions. 
+For each of these distributions, the measured data (black dot) is compared with the state-of-the-art SM predictions, where the two QCD signals $qqZZ$ (red) and $ggZZ$ (blue), and the two MC predicted backgrounds, $VVV$ (yellow) and $ttV$ (purple) are \textsc{Sherpa} predictions. The contribution from non-prompt backgrounds (light pink) is estimated using the data-driven method. The $qqZZjj$ electroweak signal is obtained from \textsc{PowhegV2}, and the electroweak production of triboson and two jets ($VZZjj$) is obtained from \textsc{Sherpa}. The vertical-solid error bars on the data points represent the statistical uncertainty in the measured data, and the dashed black band in each bin represents the impact of the total theoretical and experimental uncertainties on the predicted detector-level yields. The impact on the bin yield from the total systematic uncertainties and the statistical precision each ranges from $15$ to $20\%$, depending on the bins and the distributions. 
 
-The lower panel in these distributions shows the ratio of data yields to the total SM predicted yields, which are compatible within the total uncertainties. Some discrepancies are observed for some distributions. For instance, the yield is underpredicted in the second and the third bin of $m_{jj}$ and $m_{4l}$, respectively. However, these differences are statistically insignificant. Moreover, a slight but statistically insignificant asymmetry is also observed in the measured distribution of $\Delta \phi _{jj}^{signed}$, which is expected to be symmetric in the SM. 
+The lower panels in these distributions show the ratio of data yields to the total SM predicted yields, which are compatible within the total uncertainties. Some discrepancies are observed for some distributions. For instance, the yield is underpredicted in the second and the third bin of $m_{jj}$ and $m_{4l}$, respectively. However, these differences are statistically insignificant. Moreover, a slight but statistically insignificant asymmetry is also observed in the measured distribution of $\Delta \phi _{jj}^{signed}$, which is expected to be symmetric in the SM. 
 
-A simple chi-squared per degree of freedom ($\chi^2/NDF$) is estimated to quantify whether the measured data agree with the SM prediction. As the data yield is event counts, the $\chi^2/NDF$ is computed using the residual difference in each bin between the unweighted data yield and the weighted MC prediction yield. The respective statistical and systematic uncertainties are also considered in the computation of the $\chi^2/NDF$. The reported values of $\chi^2/NDF$ for each distribution in Figures \ref{fig:reco_VBS_Enhanced_a} and \ref{fig:reco_VBS_Enhanced_b} show statistically good agreement between the measured data and SM predictions. Most values of $\chi^2/NDF$ are all smaller than one suggesting the systematic uncertainties could be overestimated in these distributions. The experimental uncertainties related to physics object reconstruction are estimated in a different phase space than the measurements, possibly contributing to the overestimation of the systematic uncertainties. 
+A simple chi-squared per degree of freedom ($\chi^2/NDF$) is estimated to quantify whether the measured data agree with the SM prediction. As the data yield is event counts, the $\chi^2/NDF$ is computed using the residual difference in each bin between the unweighted data yield and the weighted MC prediction yield. The respective statistical and systematic uncertainties are also considered in the computation of the $\chi^2/NDF$. The reported values of $\chi^2/NDF$ for each distribution in Figures \ref{fig:reco_VBS_Enhanced_a} and \ref{fig:reco_VBS_Enhanced_b} show statistically good agreement between the measured data and SM predictions. Most values of $\chi^2/NDF$ are smaller than one suggesting the systematic uncertainties could be overestimated in these distributions. The experimental uncertainties related to physics object reconstruction are estimated in a different phase space than the analysis's, which could contribute to the overestimation of these systematic uncertainties. 
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
@@ -58,7 +58,7 @@ A simple chi-squared per degree of freedom ($\chi^2/NDF$) is estimated to quanti
     \caption{Detector level distributions in the VBS-Enhanced region.}  \label{fig:reco_VBS_Enhanced_a}
 \end{figure}
 
-\begin{figure}[!htb]
+\begin{figure}[!htbp]
     \centering
     \begin{subfigure}{.49\textwidth}
         \centering
